syntax = "proto3";

package playlist;

service PlaylistService {
  rpc GetUserPlaylist (GetUserPlaylistRequest) returns (GetUserPlaylistResponse) {}
}

message GetUserPlaylistRequest {
  string userId = 1;
}

message UserPlaylist {
  string id = 1;
  string title = 2;
  string coverImg = 3;
  int32 musicCount = 4;
}

message GetUserPlaylistResponse {
  repeated UserPlaylist playlists = 1;
}